public/css/custom.css
/* ... */
  
.sol .contbox {position: relative;min-height: 247px;}
.sol .contbox ul {margin-bottom:0; margin-right:30px;}
.sol .greybox, .cre .greybox {
	display: none;
	width: 92.1%;
  height: 89.5%;
	position: absolute;
	/*background:url(../img/transBG_box.png) repeat;*/
	z-index:1;
	opacity: 0.5;
    margin: 3.9%; 
    background-color: #000;
} 
.sol-1 {background:#eee80a url(../img/Images-36.png); background-position:right;}
.sol-2 {background:#1f9ea0 url(../img/Images-36.png); background-position:right;}
.sol-3 {background:#c63f48 url(../img/Images-36.png); background-position:right;}
.sol-4 {background:#F7941E url(../img/Images-36.png); background-position:right;}
.sol-5 {background:#45B97C url(../img/Images-36.png); background-position:right;}
.sol-6 {background:#8F53A1 url(../img/Images-36.png); background-position:right;}
.sol-7 {background:#8F53A1 url(../img/Images-36.png); background-position:right;}
.sol-8 {background:#eee80a url(../img/Images-36.png); background-position:right;}
.sol-9 {background:#1f9ea0 url(../img/Images-36.png); background-position:right;}

.panel-body.overlap { 
	position: absolute; 
    left: 0;
    right: 0;
    padding: 5% 5% 0 3%;
    margin:  -25% 0px 0px 0px; 

}
.panel-body.overlap p {
	z-index:1;
	position:relative;
	color:#fff; 
  padding-left: 5px;
}
.panel-title { float:left; font-size:18px;padding-right: 0px;}
.panel-title-desc {padding-left:2%; padding-right:10px; float:left; font-size:12px;}

/*credential page*/ 
.cre-box{cursor: pointer;padding: 0px;} 
.cre .panel-body.overlap {margin: -25% 0px 0px 0px;}
.sol .panel-body.overlap {margin: 0px auto;width: 80%;position: absolute;top: 35%;}
.container-fluid.cre{background:#A9A6A6;} 	
.container-fluid.cre .panel-body.overlap{position: absolute;top: 40%;width: 100%;margin: 0px}
.container-fluid.cre > .row{height: 100%;}
.container-fluid.cre > .row > div{min-height: 262px;}
.cre-1, .cre-2, .cre-3, .cre-4, .cre-5, .cre-6, .cre-7, .cre-8 {
	cursor:pointer;}
.cre-1 {background:url(../img/Credential%20Thumbnail/Hairdepot_Thumbnail_Background.jpg);}
.cre-2 {background:url(../img/Credential%20Thumbnail/Greenology_Thumbnail_Background.jpg);}
.cre-3 {background:url(../img/Credential%20Thumbnail/PLT_Website_Thumbnail_Background.jpg);}
.cre-4 {background:url(../img/Credential%20Thumbnail/PLT_Website_Thumbnail_Background.jpg);}
.cre-5 {background:url(../img/Credential%20Thumbnail/HairMilk_Thumbnail_Background.jpg);}
.cre-6 {background:url(../img/Credential%20Thumbnail/Hairdepot_Thumbnail_Background.jpg);}
.cre-7 {background:url(../img/Credential%20Thumbnail/HairMilk_Thumbnail_Background.jpg);}
.cre-8 {background:url(../img/Credential%20Thumbnail/PLT_Website_Thumbnail_Background.jpg);} 
.cre .panel-title {text-align:center;width: 100%;}
.cre .contbox {position: relative;;min-height: 260px;}
.sol .contbox ul,.cre .contbox ul {margin: 0px;padding: 0px; }

.credential .blankbox{width: 100%;margin-bottom: -1px;}
.credential .whitebg {background-color:#ffffff ; }
.credential .box{bottom:0px; margin-bottom:1.3%; color:#fff;     margin-top: -120px;}
.credential .box-content{padding:10px 20px;width: 99%;
  -moz-opacity: 0.85;
  -khtml-opacity: 0.85;
  opacity: 0.85;
  -ms-filter:"progid:DXImageTransform.Microsoft.Alpha"(Opacity=85);
  filter: progid:DXImageTransform.Microsoft.Alpha(opacity=85);
  filter:alpha(opacity=85);}
.credential .box-bg{position: absolute;width: 98.7%;height: 100%;}
.credential .cre-of1 {position:absolute; bottom:0; right:0; z-index:2;}
.credential .desctitle { font-size:14px; font-weight:bold;}
.credential .box-content h3 {margin-top:0px; margin-bottom:18px;}
.credential .box-content p {margin-bottom:5px;}
.credential .col-ppl .photo {margin-bottom:10px; text-align:center;}
.credential .col-ppl p {text-align:center; font-size:12px;}
.credential .crecol-1 {padding-left:0;}
.credential .crecol-1,.credential .crecol-2{text-align: justify;}
.cre .scene{left:-5%;}
.cre .comingsoon {}

  .sol .hidden-text, .cre .hidden-text{
    display: none;
  }

.project-block-content > .row{background-color: #fff;}
.slick-dots{bottom: 0px;}
.slick-dots li button:before{font-size: 11px;}
.slick-slider{margin-bottom: 0px}
.slick-arrow{width: 44px;height: 44px;}
.slick-prev-wrapper{cursor:pointer;position: absolute;right: 5%;top: 33%;z-index: 5}
.slick-next-wrapper{cursor:pointer;position: absolute;right: 5%;top: 50%;z-index: 5}

.container-fluid.process{margin: 4.5%;background-color: #eee;padding-top: 80px;}
.process-flow{padding: 0px;}
.process .flow {background:url(../img/processBG.png) no-repeat center; padding:40px 0; margin:40px 0; color:#333;}
.process .flow .left {width:50%; height:100px; margin-right:50%; background:url(../img/processflowL.png) no-repeat right;margin-left: 0.5%;}
.process .flow .right {width:50%; height:100px; margin-left:49.6%; background:url(../img/processflowR.png) no-repeat left;}
.process .flow .box  {width: 507px; padding:22px 90px; position:relative;height: 100%}
.process .flow .left .box {float:right;}
/*.process .flow .right .box {float:left;}*/
.process .flow .left .box span {color: #f7941a; font-size:25px; position: absolute; right: 50px; bottom: 0px;}
.process .flow .right .box span {color: #f7941a; font-size:25px; position: absolute; left: 50px; bottom: 0px;}

.container-fluid.aboutus{margin: 4.5%;background-color: #eee;padding-top: 80px;}
.aboutus .tagline {color:#f7941a; font-size:55px;}
.aboutus .sub-tagline {color:#fff; font-size:20px; margin-bottom:50px;font-weight: lighter;}
.aboutus .about-img1 {position:absolute; bottom:0; right:0; z-index:2;}
.aboutus .about-txt {margin-top :50px; margin-bottom:80px;}
.aboutus .about-txt h4 {color:#f7941a; font-size:18px; margin-top:20px;}
.aboutus .about-img2 {height:253px; display:block; background:url(../img/Images-08-1.png) no-repeat center center; clear:both;}
.aboutus .about-img3 {clear:both; text-align:center;}
/* ... */

